--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -103,6 +103,7 @@
 <script type="text/javascript" src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
 <script src="components/lightbox2/dist/js/lightbox.js"></script>
+<script src="components/ngmap/build/scripts/ng-map.js"></script>
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
 
@@ -118,6 +119,8 @@
 <script src="js/modules/admin/notificationModule.js"></script>
 <script src="js/modules/admin/administratorModule.js"></script>
 <script src="js/modules/admin/accountsModule.js"></script>
+<script src="js/modules/admin/accountsModule.js"></script>
+<script src="js/modules/gpsModule.js"></script>
 <!--Services-->
 <script src="js/services.js"></script>
 <script src="js/lib/bundles/ng-table.js"></script>
