--- a/client/views/partials/admin/services/gpsAccounts.html
+++ b/client/views/partials/admin/services/gpsAccounts.html
@@ -49,9 +49,22 @@
                 <td data-title="'Reg Date'" sortable="'createdAt'" class="clickable-item">
                     {{account.createdAt | date:'dd-MM-yyyy'}}
                 </td>
-                <td data-title="'No of Trucks'" class="clickable-item">
-                    {{account.noOfTrucks}}
+                <!--<td data-title="'No of Trucks'" class="clickable-item">-->
+                    <!--{{account.noOfTrucks}}-->
+                <!--</td>-->
+                <td data-title="'No of Trucks'" class="clickable-item"><a href="#" ng-click="getMap(account._id)">{{account.noOfTrucks}}</a>
+                    <script type="text/ng-template" id="getLocation.html">
+                        <div>
+                            <span class="close-btn" style="z-index:100;" ng-click="cancel()"><i class="fa fa-close pull-right" style="margin:5px"></i></span>
+
+                        </div>
+
+                        <div map-lazy-load="https://maps.google.com/maps/api/js">
+                            <ng-map center="17,78" zoom="3" style="display: block;height:400px"></ng-map>
+                        </div>
+                    </script>
                 </td>
+
                 <td data-title="'Sold By'" sortable="'createdBy.userName'" class="clickable-item">
                     {{account.createdBy.userName | date:'dd-MM-yyyy'}}
                 </td>
@@ -61,6 +74,7 @@
                 <td data-title="'ERP'" sortable="'erpEnabled'" class="clickable-item">
                     {{account.erpEnabled?'Enabled':'Disabled'}}
                 </td>
+
                 <td data-title="'LOAD'" sortable="'loadEnabled'" class="clickable-item">
                     {{account.loadEnabled?'Enabled':'Disabled'}}
                 </td>
