mandatory fields removed

--- a/client/views/partials/admin/services/gpsAccounts.html
+++ b/client/views/partials/admin/services/gpsAccounts.html
@@ -28,7 +28,7 @@
         <div class="clearfix"></div>
     </ul>
     <div class="table-res">
-        <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
+        <table class="table table-bordered table-striped table-condensed table-hover"
                ng-table="accountParams">
             <tr ng-repeat="account in currentPageOfAccounts" style="text-align: center;">
                 <td data-title="'Customer Name'" sortable="'contactName'" class="clickable-item">
