--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -118,7 +118,7 @@
                     <div class=" styling-input-list">
                         <textarea ng-model="trip.remarks" class="form-control custom-form-control"
                                   id="remarks"></textarea>
-                        <label class="focus-effect-for-input" aria-hidden="true">Remarks*</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">Remarks</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
