--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -67,25 +67,25 @@
         <div class="col-sm-6 col-xs-12 mt-10">
             <div class="form-group col-xs-12">
                 <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
-                             class="'custom-form-control'" placeholder="'Fitness Expiry*'"></date-picker>
+                             class="'custom-form-control'" placeholder="'Fitness Expiry'"></date-picker>
             </div>
             <div class="form-group col-xs-12">
                 <date-picker id="permitExpiry" ng-model="truck.permitExpiry"
-                           class="'custom-form-control'" placeholder="'Permit Due Expiry Date*'"></date-picker>
+                           class="'custom-form-control'" placeholder="'Permit Due Expiry Date'"></date-picker>
             </div>
             <div class="form-group col-xs-12">
                 <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"
-                            class="'custom-form-control'" placeholder="'Insurance Due Expiry Date*'"></date-picker>
+                            class="'custom-form-control'" placeholder="'Insurance Due Expiry Date'"></date-picker>
             </div>
             <div class="form-group col-xs-12">
                 <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"
-                            class="'custom-form-control'" placeholder="'Pollution Due Expiry Date*'"></date-picker>
+                            class="'custom-form-control'" placeholder="'Pollution Due Expiry Date'"></date-picker>
                 <label class="focus-effect-for-input-trucks" aria-hidden="true"></label>
 
             </div>
             <div class="form-group col-xs-12">
                 <date-picker id="taxDueDate" ng-model="truck.taxDueDate"
-                            class="'custom-form-control'" placeholder="'Tax Due Expiry Date*'"></date-picker>
+                            class="'custom-form-control'" placeholder="'Tax Due Expiry Date'"></date-picker>
 
             </div>
         </div>
