Latest Changes in ERP Module

--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -17,7 +17,7 @@
                     <div class="styling-input-list">
                         <input ng-model="driver.mobile" type="number" class="form-control custom-form-control"
                                id="mobile">
-                        <label class="focus-effect-for-input" aria-hidden="true">Contact Number*</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">Contact Number</label>
 
                     </div>
                 </div>
